force-app/main/default/objects/ServiceAppointment/fields/Action_Taken_Copied__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken_Copied__c</fullName>
    <label>Action Taken Copied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>