force-app/main/default/objects/ServiceAppointment/fields/Cannot_Complete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Reason__c</fullName>
    <label>Cannot Complete Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Part</fullName>
            </value>
            <value>
                <fullName>Follow up Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>