force-app/main/default/objects/ServiceAppointment/fields/Close_Appointment_Without_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Close_Appointment_Without_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field only when you would like to close the appointment without creating any transaction</inlineHelpText>
    <label>Close SA without Capturing Transaction</label>
    <type>Checkbox</type>
</CustomField>