force-app/main/default/objects/ServiceAppointment/fields/Contract_Remote_Job__c.field-meta.xml
<CustomField>
    <fullName>Contract_Remote_Job__c</fullName>
    <label>Contract Remote Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>