force-app/main/default/objects/ServiceAppointment/fields/Email_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Case__c</fullName>
    <formula>Case__r.Tech_Email_to_Case__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email to Case</label>
    <type>Checkbox</type>
</CustomField>