force-app/main/default/objects/ServiceAppointment/fields/JSEA__c.field-meta.xml
<CustomField>
    <fullName>JSEA__c</fullName>
    <label>JSEA #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>