force-app/main/default/objects/ServiceAppointment/fields/JSEA_URL__c.field-meta.xml
<CustomField>
    <fullName>JSEA_URL__c</fullName>
    <formula>IF( ISBLANK(  JSEA__c  ), &quot;project/&quot;&amp;  Work_Order__r.WorkOrderNumber  ,JSEA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JSEA URL</label>
    <type>Text</type>
</CustomField>