force-app/main/default/objects/ServiceAppointment/fields/Recall_PO_WorkItem_Id__c.field-meta.xml
<CustomField>
    <fullName>Recall_PO_WorkItem_Id__c</fullName>
    <label>Recall PO WorkItem Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>