force-app/main/default/objects/ServiceAppointment/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy with Customer</fullName>
            </value>
            <value>
                <fullName>Not Suited to Work Order</fullName>
            </value>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>