force-app/main/default/objects/ServiceAppointment/fields/Remote_Job2__c.field-meta.xml
<CustomField>
    <fullName>Remote_Job2__c</fullName>
    <label>Remote Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>