force-app/main/default/objects/ServiceAppointment/fields/Service_Appointment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Completed__c</fullName>
    <description>This field is used on report to track the number of completed SA</description>
    <formula>IF(ISPICKVAL(StatusCategory , &#39;Completed&#39;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>