force-app/main/default/objects/ServiceAppointment/fields/Site_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Email__c</fullName>
    <description>This email is used to send the service report using a trigger</description>
    <formula>Work_Order__r.Site_Contact__r.Email</formula>
    <label>Site Contact Email</label>
    <type>Text</type>
</CustomField>