force-app/main/default/objects/ServiceAppointment/fields/Site_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_ID__c</fullName>
    <formula>Work_Order__r.Site_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site_Contact_ID</label>
    <type>Text</type>
</CustomField>