force-app/main/default/objects/ServiceAppointment/fields/Suggested_Followup_Copied__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Followup_Copied__c</fullName>
    <label>Suggested Followup Copied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>