force-app/main/default/objects/ServiceAppointment/fields/Transaction_Completed__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction Completed</label>
    <type>Checkbox</type>
</CustomField>