force-app/main/default/objects/ServiceAppointment/fields/Work_Order_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Completed__c</fullName>
    <label>Work Order Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>