force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP02_UsePrepurchaseHoursMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP02_UsePrepurchaseHoursMandatory</fullName>
    <active>true</active>
    <description>The SA cannot be updated to Completed or Cannot Complete when Use of Pre Purchase Hours has not been populated on the WO</description>
    <errorConditionFormula>ISBLANK( TEXT(Work_Order__r.Use_Pre_purchased_Hours__c) ) &amp;&amp; (ISPICKVAL(Status, &#39;Cannot Complete&#39;) || ISPICKVAL(Status, &#39;Completed&#39;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status cannot be &quot;Completed&quot; or &quot;Cannot Complete&quot; when &quot;Use of Pre Purchase Hours&quot;has not been populated.</errorMessage>
</ValidationRule>