force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP04_ActionTakenMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP04_ActionTakenMandatory</fullName>
    <active>true</active>
    <description>Action Taken field is mandatory when the status is &quot;Completed&quot; or &quot;Cannot Complete&quot;</description>
    <errorConditionFormula>ISBLANK(  Action_Taken__c   ) &amp;&amp; (ISPICKVAL(Status, &#39;Cannot Complete&#39;) || ISPICKVAL(Status, &#39;Completed&#39;))</errorConditionFormula>
    <errorDisplayField>Action_Taken__c</errorDisplayField>
    <errorMessage>This field is mandatory when the status is &quot;Completed&quot; or &quot;Cannot Complete&quot;</errorMessage>
</ValidationRule>