force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP05_WorkOrderCompletedMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP05_WorkOrderCompletedMandatory</fullName>
    <active>true</active>
    <description>Work Order Completed? field is mandatory when the status is &quot;Completed&quot;</description>
    <errorConditionFormula>ISBLANK(  TEXT(Work_Order_Completed__c)    ) &amp;&amp; ISPICKVAL(Status, &#39;Completed&#39;)</errorConditionFormula>
    <errorDisplayField>Work_Order_Completed__c</errorDisplayField>
    <errorMessage>This field is mandatory when the status is &quot;Completed&quot;</errorMessage>
</ValidationRule>