force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP06_TransactionsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP06_TransactionsMandatory</fullName>
    <active>false</active>
    <description>Capture Transaction or Check &apos;Close SA without Capturing Transaction&apos; field before changing the status to &quot;Completed&quot; or &quot;Cannot Complete&quot;</description>
    <errorConditionFormula>(Transaction_Completed__c = FALSE &amp;&amp; Close_Appointment_Without_Transaction__c = FALSE)  
&amp;&amp; 
(ISPICKVAL(Status, &apos;Cannot Complete&apos;) || 
ISPICKVAL(Status, &apos;Completed&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Capture Transaction or Check &apos;Close SA without Capturing Transaction&apos; field before changing the status to &quot;Completed&quot; or &quot;Cannot Complete&quot;</errorMessage>
</ValidationRule>