force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP07_RemoteJob.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP07_RemoteJob</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Remote_Job2__c, &#39;Yes&#39;) &amp;&amp; ISPICKVAL( Contract_Remote_Job__c , &#39;No&#39;)</errorConditionFormula>
    <errorDisplayField>Remote_Job2__c</errorDisplayField>
    <errorMessage>The related service contract does not have remote access</errorMessage>
</ValidationRule>