force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP08_ActionTakenReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP08_ActionTakenReadOnly</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status ,&#39;Completed&#39;) &amp;&amp;  ISCHANGED( Action_Taken__c )</errorConditionFormula>
    <errorDisplayField>Action_Taken__c</errorDisplayField>
    <errorMessage>Action Taken cannot be updated with the Service Appointment status is &#39;Completed&#39;</errorMessage>
</ValidationRule>