force-app/main/default/objects/ServiceAppointment/validationRules/VR_SAP09_SuggestedFollowupReadOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_SAP09_SuggestedFollowupReadOnly</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status ,&#39;Completed&#39;) &amp;&amp;  ISCHANGED(  Suggested_Follow_up__c  )</errorConditionFormula>
    <errorDisplayField>Suggested_Follow_up__c</errorDisplayField>
    <errorMessage>Suggested Follow Up cannot be updated with the Service Appointment status is &#39;Completed&#39;</errorMessage>
</ValidationRule>