force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Work_Order__c</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>Service_Resource_Name__c</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Appointments</label>
</ListView>