force-app/main/default/objects/ServiceAppointment/listViews/DPTI_Appointments.listView-meta.xml
<ListView>
    <fullName>DPTI_Appointments</fullName>
    <columns>Name</columns>
    <columns>Work_Order__c</columns>
    <columns>Case__c</columns>
    <columns>Service_Contract__c</columns>
    <columns>Description</columns>
    <columns>Status</columns>
    <columns>Work_Order_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account</field>
        <operation>contains</operation>
        <value>DPTI</value>
    </filters>
    <label>DPTI - Appointments</label>
    <sharedTo>
        <group>NOC_Admin</group>
    </sharedTo>
</ListView>