force-app/main/default/objects/ServiceAppointment/listViews/My_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>My_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <filterScope>AssignedToMe</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>SchedEndTime</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>My Service Appointments</label>
</ListView>