force-app/main/default/objects/ServiceAppointment/listViews/WA_Last_24H_Email_to_Case_SA_LV.listView-meta.xml
<ListView>
    <fullName>WA_Last_24H_Email_to_Case_SA_LV</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_to_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>equals</operation>
        <value>WA</value>
    </filters>
    <label>Last 24H Email to Case WA</label>
    <sharedTo>
        <group>WA</group>
    </sharedTo>
</ListView>